# braintumor

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  build_info.json  cleanup.ps1  release_manifest.json
.github/workflows/: cd.yml  ci.yml
ai-service/: .dockerignore  Dockerfile  Makefile  bootstrap_model.py  debug_route2.py  download_and_train.py  finetune_log.txt  post_train_validate.py  pyproject.toml  requirements.txt  restore_checkpoint.py  restore_log.txt  setup_env.ps1  setup_env.sh  train_finetune.py  train_full.py  training_log.txt  validate_model.py
ai-service/app/: __init__.py  main.py
ai-service/app/api/: performance_routes.py  routes.py
ai-service/app/core/: config.py  logging.py
ai-service/app/dataset/: __init__.py  validator.py
ai-service/app/inference/: __init__.py  cache.py  config.py  pipeline.py  results.py
ai-service/app/metrics/: __init__.py  dashboard.py  inference.py  system.py  training.py
ai-service/app/models/: __init__.py  architectures.py  evaluate.py  load_model.py  predict.py  save_model.py  train.py
ai-service/app/performance/: __init__.py  benchmark.py  cache.py  concurrency.py  memory.py  profiler.py  reports.py
ai-service/app/preprocessing/: __init__.py  augmentation.py  config.py  quality.py  transforms.py
ai-service/app/security/: __init__.py  audit.py  auth.py  dependencies.py  jwt.py  password.py  rate_limit.py  roles.py
ai-service/app/training/: __init__.py
ai-service/app/utils/: glcm_features.py  gradcam.py
ai-service/scripts/: verify_imports.py  verify_inference.py
ai-service/tests/: test_dataset.py  test_health.py  test_imports.py  test_metrics.py  test_performance.py  test_preprocessing.py  test_training_checkpoints.py  test_training_trainer.py
ai-service/tests/deployment/: conftest.py  test_environment_checks.py
ai-service/training/: __init__.py  callbacks.py  checkpoints.py  config.py  trainer.py
backend/: .env.example  package-lock.json  package.json  server.js
backend/api/: classify.route.js  features.route.js  preprocess.route.js  results.route.js
backend/baselines/: cnn.js  rcnn.js  rfc.js
backend/database/: brain_tumor.db  db.js  migrate.js
backend/middleware/: upload.middleware.js
backend/models/: .gitkeep
backend/tests/: health.test.js
backend/training/: evaluate.js
backend/utils/: csvWriter.js  imageUtils.js  logger.js  metrics.js  timer.js
braintumor-main/: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  RELEASE_CHECKLIST.md
braintumor-main/ai-service/: .env.example  .env.production  .gitignore  Dockerfile  Makefile  README.md  debug_route.py  requirements-dev.txt
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.prod.yml  docker-compose.yml  nginx.conf
docker/nginx/: default.conf
docs/: api_reference.md  authentication_architecture.md  deployment-guide.md  deployment.md  developer_guide.md  docker-guide.md  faq.md  final_report.md  installation.md  performance.md  production-checklist.md  project_architecture.md  troubleshooting.md  user_guide.md
frontend/: .eslintrc.cjs  .prettierignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
notebooks/: 01_data_exploration.md  02_preprocessing_notes.md  04_feature_analysis.md  05_evaluation_notes.md
scripts/: backup.sh  bump-version.sh  deploy.ps1  deploy.sh  package_release.ps1  restore.sh  validate-env.sh
tests/: test.api.js  test.ednSvm.js  test.glcm.js  test.pipeline.js
uploads/: .gitkeep
(+205 files in other folders)
